--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>Volume calculator</title>
+    <link rel="icon" href="favicon.ico">
 </head>
 <body class="d-flex flex-column min-vh-100">
 <nav class="navbar bg-secondary-subtle text-secondary p-2 mb-4">
